Add support for old ffsv1 superblocks.  After reading an old superblock, copy appropriate data to where they are expected in the updated superblock. When writing the updated superblock, move the updated values back to the old ffsv1 superblock locations.  Also check for old superblock format when updating the last cylinder group and adjust cg_old_ncyl appropriately. Derived from how mksf sets them.  Should address PR bin/44209.